# clideck

./: .gitignore  CONTRIBUTING.md  CliDeck.cmd  CliDeckDesktop.cmd  LICENSE  README.md  README.zh-CN.md  app.py  pyproject.toml  run.sh  start-clideck-desktop.ps1  start-clideck.ps1
.github/workflows/: ci.yml
agent_console/: __init__.py  app_server.py  config.py  desktop.py  models.py  server.py
agent_console/collectors/: __init__.py  claude.py  codex.py  local.py  processes.py  ssh.py  tmux.py
agent_console/static/: index.html
tests/agent_console/: test_app_server.py  test_codex_collector.py  test_config_ssh.py  test_desktop.py  test_local_collectors.py  test_models.py  test_server.py  test_static_ui.py
