[project]
name = "clideck"
version = "0.1.0"
description = "Web console for monitoring and controlling local and remote CLI agent sessions"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "httpx2>=2.0",
    "paramiko>=3.4",
    "tomli>=2; python_version < '3.11'",
    "uvicorn[standard]>=0.32",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app"]
packages = ["agent_console", "agent_console.collectors", "agent_console.static"]

[tool.setuptools.package-data]
"agent_console.static" = ["*.html"]
